gallery section added

--- a/landing-page.html
+++ b/landing-page.html
@@ -31,16 +31,16 @@
             Services
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Frontend Design</a></li>
+            <li><a class="dropdown-item" href="#">Frontend Development</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Backend Design</a></li>
+            <li><a class="dropdown-item" href="#">Backend Development</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Full Stack Development</a></li>
           </ul>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="#" tabindex="-1">Contact</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -66,9 +66,88 @@
       <img class="img-fluid w-50 d-none d-sm-block" src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="">
     </div>
   </div>
+</section>
 <!-- End of hero section -->
 
 
+<!-- This is gallery section -->
+<section>
+    <h1 class="text-center my-5">Gallery</h1>
+    <div class="container text-center mt-5">
+        <div class="row">
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/come stay.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Meditate will heal you!</h5>
+                <p class="card-text">Very quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/travel with shower.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Travel around the World</h5>
+                <p class="card-text">Each quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/web development.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Design your website</h5>
+                <p class="card-text">Every quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>  
+            </div>
+            </div> 
+        </div>
+        </div>
+
+         <div class="container text-center mt-5">
+        <div class="row">
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/travel with sea.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Travel in the sea!</h5>
+                <p class="card-text">Very quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/around the world.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">The sunshine</h5>
+                <p class="card-text">Each quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card">
+            <img src="images/travel hat boy.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">The hat boy</h5>
+                <p class="card-text">Every quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>  
+            </div>
+            </div> 
+        </div>
+        </div>
+
+                
+</section>
+
+
+<!-- End of gallery section -->
 
 
 
@@ -84,48 +163,10 @@
 
 
 
- <!-- This is Contact Form -->
-
-<!-- <section class="container my-5">
-    <form class="w-50 m-auto bg-dark    p-4 text-white rounded">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <div>
-    <button type="submit" class="btn btn-light">Submit</button>
-  </div>
-</form>
-</section>  -->
-  <!-- End of Contact Form -->
 
 
 
 
-
-<!-- 
-<div class="container text-center bg-info py-2" >
-  <div class="row">
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-  </div>
-</div> -->
 
 
 
