--- a/landing-page.html
+++ b/landing-page.html
@@ -69,6 +69,85 @@
 </section>
 <!-- End of hero section -->
 
+<!-- Start Our Services -->
+<section class="p-4 mb-2 bg-light text-black">
+  <div class="container">
+    <h1 class="text-center mb-4">Our Services</h1>
+    <div class="row g-4">
+      <div class="col-md">
+        <div class="card bg-dark text-light">
+          <div class="card-body text-center">
+            <div class="h1 mb-3">
+              <i class="bi bi-laptop"></i>
+            </div>
+            <h3 class="card-title mb-3">Frontend Development</h3>
+            <p class="card-text">   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            <a href="#" class="btn btn-primary">Read More</a>                   
+            </div>  
+        </div>
+      </div>            
+
+        <div class="col-md">
+            <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+                <div class="h1 mb-3">
+                <i class="bi bi-code-slash"></i>
+                </div>
+                <h3 class="card-title mb-3">Backend Development</h3>
+                <p class="card-text">   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <a href="#" class="btn btn-primary">Read More</a>                   
+                </div>  
+            </div>
+        </div>
+
+        <div class="col-md">
+            <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+                <div class="h1 mb-3">
+                <i class="bi bi-phone"></i>
+                </div>
+                <h3 class="card-title mb-3">Full Stack Development</h3>
+                <p class="card-text">   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <a href="#" class="btn btn-primary">Read More</a>
+                </div>  
+            </div>          
+        </div>
+    </div>
+  </div>                                                    
+</section>  
+ <!-- End of Our Services -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- This is gallery section -->
 <section>
