--- a/landing-page.html
+++ b/landing-page.html
@@ -72,7 +72,7 @@
 <!-- Start Our Services -->
 <section class="p-4 mb-2 bg-light text-black">
   <div class="container">
-    <h1 class="text-center mb-4">Our Services</h1>
+    <h1 class="text-center mb-4">We offer Services...</h1>
     <div class="row g-4">
       <div class="col-md">
         <div class="card bg-dark text-light">
@@ -119,39 +119,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- This is gallery section -->
 <section>
-    <h1 class="text-center my-5">Gallery</h1>
+    <h1 class="text-center my-5">Our Design Template Gallery</h1>
     <div class="container text-center mt-5">
         <div class="row">
         <div class="col-md-4 mb-3">
@@ -220,13 +190,51 @@
             </div>
             </div> 
         </div>
-        </div>
-
-                
+        </div>             
 </section>
-
-
 <!-- End of gallery section -->
+
+ <!-- This is Testimonials Section -->
+<section class="p-5 bg-dark text-light">
+    <div class="container">
+        <h1 class="text-center mb-4">Testimonials</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card bg-light text-dark mb-3">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                        <h5 class="card-title">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Web Developer</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-light text-dark mb-3">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                        <h5 class="card-title">Jane Smith</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">UI/UX Designer</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-light text-dark mb-3">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                        <h5 class="card-title">Alice Johnson</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Project Manager</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End of Testimonials Section -->
+
+
+
+
+
 
 
 
