added about us section

--- a/landing-page.html
+++ b/landing-page.html
@@ -232,6 +232,21 @@
 <!-- End of Testimonials Section -->
 
 
+<!-- This is About Section -->
+<section class="p-5 bg-light text-black">       
+    <div class="container">
+        <h1 class="text-center mb-4">About Us</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            </div>
+            <div class="col-md-6">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            </div>
+        </div>
+    </div> 
+</section>
+<!-- End of About Section -->
 
 
 
