added footer section

--- a/landing-page.html
+++ b/landing-page.html
@@ -249,32 +249,16 @@
 <!-- End of About Section -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- This is Footer Section -->
+<footer class="bg-dark text-light text-center p-3">
+    <p class="mb-0">© 2023 Lazy Coder. All rights reserved.</p>
+    <p class="mb-0">Follow us on 
+        <a href="#" class="text-light">Facebook</a>, 
+        <a href="#" class="text-light">Twitter</a>, 
+        <a href="#" class="text-light">Instagram</a>
+    </p>
+</footer>
+<!-- End of Footer Section -->
 
 
 
