social media link added in the footer section

--- a/landing-page.html
+++ b/landing-page.html
@@ -251,19 +251,14 @@
 
 <!-- This is Footer Section -->
 <footer class="bg-dark text-light text-center p-3">
-    <p class="mb-0">© 2023 Lazy Coder. All rights reserved.</p>
+    <p class="mb-0">© 2025 Lazy Coder. All rights reserved.</p>
     <p class="mb-0">Follow us on 
-        <a href="#" class="text-light">Facebook</a>, 
-        <a href="#" class="text-light">Twitter</a>, 
-        <a href="#" class="text-light">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=61577689244783" class="text-light">Facebook</a>, 
+        <a href="https://x.com/taskinahmed2050" class="text-light">Twitter</a>, 
+        <a href="https://www.instagram.com/nazmussadat81/" class="text-light">Instagram</a>
     </p>
 </footer>
 <!-- End of Footer Section -->
-
-
-
-
-
 
 
 
