added progress bar section

--- a/landing-page.html
+++ b/landing-page.html
@@ -117,6 +117,29 @@
 </section>  
  <!-- End of Our Services -->
 
+ <!-- This is Progress Section -->
+<section id="progress" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-4">Our Progress</h2>
+    
+    <p>Frontend Development</p>
+    <div class="progress mb-3">
+      <div class="progress-bar bg-success" role="progressbar" style="width: 95%"><b>95%</b></div>
+    </div>
+
+    <p>Backend Development</p>
+    <div class="progress mb-3">
+      <div class="progress-bar bg-info" role="progressbar" style="width: 96%"><b>96%</b></div>
+    </div>
+
+    <p> Full Stack Development</p>
+    <div class="progress mb-3">
+      <div class="progress-bar bg-warning" role="progressbar" style="width: 90%"><b>90%</b></div>
+    </div>
+  </div>
+</section>
+<!-- End of Progress Section -->
+
 
 
 <!-- This is gallery section -->
@@ -197,7 +220,7 @@
  <!-- This is Testimonials Section -->
 <section class="p-5 bg-dark text-light">
     <div class="container">
-        <h1 class="text-center mb-4">Testimonials</h1>
+        <h1 class="text-center mb-4">Clients Feedback</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light text-dark mb-3">
