--- a/landing-page.html
+++ b/landing-page.html
@@ -134,7 +134,7 @@
 
     <p> Full Stack Development</p>
     <div class="progress mb-3">
-      <div class="progress-bar bg-warning" role="progressbar" style="width: 90%"><b>90%</b></div>
+      <div class="progress-bar bg-primary" role="progressbar" style="width: 90%"><b>90%</b></div>
     </div>
   </div>
 </section>
